New folder names
All folder names correspond to the ID of their content.
Added iPOJO core & manipulator JAR files.

--- a/trunk/org.ow2.chameleon.eclipse.ipojo.nature/.project
+++ b/trunk/org.ow2.chameleon.eclipse.ipojo.nature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>iPOJO-Nature-Dependencies</name>
+	<name>org.ow2.chameleon.eclipse.ipojo.nature</name>
 	<comment></comment>
 	<projects>
 	</projects>
