--- a/trunk/org.ow2.chameleon.eclipse.ipojo.dependencies.feature/.project
+++ b/trunk/org.ow2.chameleon.eclipse.ipojo.dependencies.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>iPOJO-Nature-Dependencies-Feature</name>
+	<name>org.ow2.chameleon.eclipse.ipojo.dependencies.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
