--- a/trunk/org.ow2.chameleon.eclipse.ipojo.dependencies.feature/pom.xml
+++ b/trunk/org.ow2.chameleon.eclipse.ipojo.dependencies.feature/pom.xml
@@ -3,12 +3,12 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.ow2.chameleon</groupId>
+		<groupId>org.ow2.chameleon.eclipse.ipojo</groupId>
 		<artifactId>org.ow2.chameleon.eclipse.ipojo.parent</artifactId>
 		<version>1.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<artifactId>org.ow2.chameleon.eclipse.ipojo.nature.feature</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<artifactId>org.ow2.chameleon.eclipse.ipojo.dependencies.feature</artifactId>
+	<version>1.8.0</version>
 	<packaging>eclipse-feature</packaging>
 </project>
