--- a/trunk/org.ow2.chameleon.eclipse.ipojo.dependencies/.project
+++ b/trunk/org.ow2.chameleon.eclipse.ipojo.dependencies/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>iPOJO-Nature</name>
+	<name>org.ow2.chameleon.eclipse.ipojo.dependencies</name>
 	<comment></comment>
 	<projects>
 	</projects>
