--- a/trunk/org.ow2.chameleon.eclipse.ipojo.nature.feature/.project
+++ b/trunk/org.ow2.chameleon.eclipse.ipojo.nature.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>iPOJO-Nature-Feature</name>
+	<name>org.ow2.chameleon.eclipse.ipojo.nature.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
