--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,52 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.ow2.chameleon</groupId>
-	<artifactId>org.ow2.chameleon.eclipse.com.isandlatech.ipojo.parent</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.ow2.chameleon.eclipse.ipojo</groupId>
+    <artifactId>org.ow2.chameleon.eclipse.ipojo.parent</artifactId>
+    <version>1.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<properties>
-		<tycho-version>0.12.0</tycho-version>
-	</properties>
+    <properties>
+        <tycho-version>0.12.0</tycho-version>
+    </properties>
 
-	<repositories>
-		<!-- configure p2 repository to resolve against -->
-		<repository>
-			<id>helios</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/helios/</url>
-		</repository>
-	</repositories>
+    <repositories>
+        <!-- configure p2 repository to resolve against -->
+        <repository>
+            <id>helios</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/releases/helios/</url>
+        </repository>
+    </repositories>
 
-	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<plugins>
-			<plugin>
-				<!-- enable tycho build extension -->
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<extensions>true</extensions>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho-version}</version>
-				<configuration>
-					<resolver>p2</resolver>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+        <plugins>
+            <plugin>
+                <!-- enable tycho build extension -->
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-maven-plugin</artifactId>
+                <version>${tycho-version}</version>
+                <extensions>true</extensions>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>target-platform-configuration</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <resolver>p2</resolver>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-	<modules>
-		<module>iPOJO-Updater-Dependencies</module>
-		<module>iPOJO-Updater-Dependencies-Feature</module>
-		<module>iPOJO-Updater</module>
-		<module>iPOJO-Updater-Feature</module>
-		<module>update-site</module>
-	</modules>
+    <modules>
+        <module>org.ow2.chameleon.eclipse.ipojo.dependencies</module>
+        <module>org.ow2.chameleon.eclipse.ipojo.dependencies.feature</module>
+        <module>org.ow2.chameleon.eclipse.ipojo.nature</module>
+        <module>org.ow2.chameleon.eclipse.ipojo.nature.feature</module>
+        <module>update-site</module>
+    </modules>
 </project>
