--- a/trunk/update-site/.project
+++ b/trunk/update-site/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>eclipse</name>
+	<name>org.ow2.chameleon.eclipse.ipojo.updatesite</name>
 	<comment></comment>
 	<projects>
 	</projects>
