--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
@@ -2,6 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .
+               .,\
+               icons/
 jars.compile.order = .,\
                      org.apache.felix.ipojo-1.6.4.jar
