--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
@@ -1,3 +1,3 @@
 bin.includes = META-INF/,\
                org.apache.felix.ipojo-1.8.0.jar,\
-               org.apache.felix.ipojo.manipulator-1.9.0-20110703.183917-1.jar
+               org.apache.felix.ipojo.manipulator-1.9.0-SNAPSHOT.jar
