--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/pom.xml
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/pom.xml
@@ -9,6 +9,6 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>org.ow2.chameleon.eclipse.ipojo.dependencies</artifactId>
-    <version>1.9.0-SNAPHOT</version>
+    <version>1.9.0-SNAPSHOT</version>
     <packaging>eclipse-plugin</packaging>
 </project>
