--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/plugin.xml
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/plugin.xml
@@ -9,7 +9,7 @@
        objectClass="org.eclipse.core.resources.IFile">
 		<action
         class="org.ow2.chameleon.eclipse.ipojo.actions.UpdateMF"
-        icon="icons/nature_marker.png"
+        icon="icons/menu_marker_16.png"
         id="org.ow2.chameleon.eclipse.ipojo.manifest.update"
         label="Update Manifest"
         menubarPath="additions"> 
@@ -24,7 +24,7 @@
     <action
           class="org.ow2.chameleon.eclipse.ipojo.builder.ToggleNatureAction"
           enablesFor="+"
-          icon="icons/nature_marker.png"
+          icon="icons/menu_marker_16.png"
           id="org.ow2.chameleon.eclipse.ipojo.nature.addRemoveNatureAction"
           label="Add/Remove iPOJO Nature"
           menubarPath="additions"
