--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/.classpath
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo.annotations-1.9.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo-1.9.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo.manipulator-1.9.0-SNAPSHOT.jar" sourcepath="/media/Data2/thomas/repos-git/felix-trunk/ipojo/manipulator/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
