Updates build.properties files
Binary build now contains LICENCE, README, NOTICE files.
iPOJO Nature plug-in also imports the help files.

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
@@ -3,6 +3,10 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               html/,\
+               help_toc.xml,\
+               NOTICE,\
+               LICENSE
 jars.compile.order = .,\
                      org.apache.felix.ipojo-1.6.4.jar
