--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
@@ -1,4 +1,7 @@
 bin.includes = META-INF/,\
                org.apache.felix.ipojo.manipulator-1.9.0-SNAPSHOT.jar,\
                org.apache.felix.ipojo-1.9.0-SNAPSHOT.jar,\
-               org.apache.felix.ipojo.annotations-1.9.0-SNAPSHOT.jar
+               org.apache.felix.ipojo.annotations-1.9.0-SNAPSHOT.jar,\
+               NOTICE,\
+               LICENSE,\
+               README
