Added the metadata.xml template option
- Better nature configuration dialog preparation
- Empty metadata.xml file creation

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
@@ -7,6 +7,7 @@ bin.includes = plugin.xml,\
                html/,\
                help_toc.xml,\
                NOTICE,\
-               LICENSE
+               LICENSE,\
+               templates/
 jars.compile.order = .,\
                      org.apache.felix.ipojo-1.6.4.jar
