Added an entry in the Eclipse About dialog

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
@@ -8,6 +8,7 @@ bin.includes = plugin.xml,\
                help_toc.xml,\
                NOTICE,\
                LICENSE,\
-               templates/
+               templates/,\
+               about.ini
 jars.compile.order = .,\
                      org.apache.felix.ipojo-1.6.4.jar
