--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -17,7 +17,7 @@
         <repository>
             <id>helios</id>
             <layout>p2</layout>
-            <url>http://download.eclipse.org/releases/helios/</url>
+            <url>http://download.eclipse.org/releases/juno/</url>
         </repository>
     </repositories>
 
@@ -48,6 +48,9 @@
 
         <module>plugins/org.ow2.chameleon.eclipse.ipojo.nature</module>
         <module>features/org.ow2.chameleon.eclipse.ipojo.nature.feature</module>
+
+        <module>plugins/org.ow2.chameleon.eclipse.ipojo.m2e</module>
+        <module>features/org.ow2.chameleon.eclipse.ipojo.m2e.feature</module>
 
         <module>update-site</module>
     </modules>
