Tycho: replaced eclipse-update-site by eclipse-repository
eclipse-update-site target is now deprecated.
(see https://bugs.eclipse.org/bugs/show_bug.cgi?id=342876)

--- a/trunk/update-site/pom.xml
+++ b/trunk/update-site/pom.xml
@@ -10,5 +10,5 @@
 	</parent>
 	<artifactId>org.ow2.chameleon.eclipse.ipojo.updatesite</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
-	<packaging>eclipse-update-site</packaging>
+	<packaging>eclipse-repository</packaging>
 </project>
