Changed logging levels
- Added method Activator.logTrace()
- Invalid usage is now logged as warning instead of information
- Trace and Information are disabled by default, they must be activated
  using the Eclipse 3.x tracing options.

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/build.properties
@@ -9,6 +9,7 @@ bin.includes = plugin.xml,\
                NOTICE,\
                LICENSE,\
                templates/,\
-               about.ini
+               about.ini,\
+               .options
 jars.compile.order = .,\
                      org.apache.felix.ipojo-1.6.4.jar
