--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
@@ -3,5 +3,5 @@ bin.includes = META-INF/,\
                LICENSE,\
                README,\
                org.apache.felix.ipojo-1.12.0.jar,\
-               org.apache.felix.ipojo.annotations-1.12.0.jar,\
-               org.apache.felix.ipojo.manipulator-1.12.0.jar
+               org.apache.felix.ipojo.manipulator-1.12.0.jar,\
+               asm-all-5.0.3.jar
