--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -15,9 +15,9 @@
 	<repositories>
 		<!-- configure p2 repository to resolve against -->
 		<repository>
-			<id>juno</id>
+			<id>kepler</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/juno/</url>
+			<url>http://download.eclipse.org/releases/kepler/</url>
 		</repository>
 	</repositories>
 
