Updated to iPOJO 1.12.1

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
@@ -2,6 +2,6 @@ bin.includes = META-INF/,\
                NOTICE,\
                LICENSE,\
                README,\
-               org.apache.felix.ipojo-1.12.0.jar,\
-               org.apache.felix.ipojo.manipulator-1.12.0.jar,\
-               asm-all-5.0.3.jar
+               org.apache.felix.ipojo.manipulator-1.12.1.jar,\
+               asm-all-5.0.4.jar,\
+               org.apache.felix.ipojo-1.12.1.jar
