--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
@@ -3,5 +3,9 @@ bin.includes = META-INF/,\
                LICENSE,\
                README,\
                org.apache.felix.ipojo.manipulator-1.12.1.jar,\
-               asm-all-5.0.4.jar,\
-               org.apache.felix.ipojo-1.12.1.jar
+               org.apache.felix.ipojo-1.12.1.jar,\
+               asm-8.0.jar,\
+               asm-analysis-8.0.jar,\
+               asm-commons-8.0.jar,\
+               asm-tree-8.0.jar,\
+               asm-util-8.0.jar
