Upgraded ASM and iPOJO dependencies
Issues with iPOJO were found (error loading classes)

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/build.properties
@@ -2,10 +2,10 @@ bin.includes = META-INF/,\
                NOTICE,\
                LICENSE,\
                README,\
-               org.apache.felix.ipojo.manipulator-1.12.1.jar,\
-               org.apache.felix.ipojo-1.12.1.jar,\
-               asm-8.0.jar,\
-               asm-analysis-8.0.jar,\
-               asm-commons-8.0.jar,\
-               asm-tree-8.0.jar,\
-               asm-util-8.0.jar
+               org.apache.felix.ipojo-1.12.2-SNAPSHOT.jar,\
+               org.apache.felix.ipojo.manipulator-1.12.2-SNAPSHOT.jar,\
+               asm-8.0.1.jar,\
+               asm-commons-8.0.1.jar,\
+               asm-tree-8.0.1.jar,\
+               asm-util-8.0.1.jar,\
+               asm-analysis-8.0.1.jar
