--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/.classpath
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/.classpath
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo-1.12.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo.manipulator-1.12.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo-1.12.2-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo.manipulator-1.12.2-SNAPSHOT.jar" sourcepath="D:/Programmation/felix-dev/ipojo"/>
+	<classpathentry exported="true" kind="lib" path="asm-8.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="asm-commons-8.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="asm-tree-8.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="asm-util-8.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="asm-analysis-8.0.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="asm-8.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="asm-analysis-8.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="asm-commons-8.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="asm-tree-8.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="asm-util-8.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
