--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/.classpath
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/.classpath
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo-1.12.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo-1.12.1.jar" sourcepath="org.apache.felix.ipojo-1.12.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="asm-all-5.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo.manipulator-1.12.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry exported="true" kind="lib" path="org.apache.felix.ipojo.manipulator-1.12.1.jar" sourcepath="org.apache.felix.ipojo.manipulator-1.12.1-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
